fix: align left STEM content

--- a/src/scss/_stem.scss
+++ b/src/scss/_stem.scss
@@ -4,11 +4,9 @@
   border-radius: $border-radius;
   overflow: hidden;
   line-height: $line-height-base;
-  text-align: center;
   margin: $spacer 0;
 
   .stem {
-    padding: $spacer * .5;
     overflow: auto;
   }
 }
